[package]
name = "rust-actix-web-demo"
version = "0.1.0"
authors = ["R. Mark Volkmann <r.mark.volkmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
parking_lot = "0.11.1"
serde = "1.0.123"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
