[package]
name = "rust-rocket-demo"
version = "0.1.0"
authors = ["R. Mark Volkmann <r.mark.volkmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true # link-time optimization

[dependencies]
parking_lot = "0.11.1"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json"] }
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = "1.0.60"
uuid = { version = "0.8.2", features = ["serde", "v4"] }