[package]
name = "rust-tide-demo"
version = "0.1.0"
authors = ["R. Mark Volkmann <r.mark.volkmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true # link-time optimization

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
parking_lot = "0.11.1"
serde = "1.0.123"
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }